# VR-Remote-Control-Robot-Linux

./: .gitignore  .gitmodules  .rosinstall  README.md
chris_ur5_moveit/: CMakeLists.txt  package.xml
chris_ur5_moveit/launch/: chris_robot_feedback.launch  chris_ur5_moveit.launch  chris_ur5_with_feedback.launch  part_3.launch
chris_ur5_moveit/scripts/: mover.py
chris_ur5_moveit/src/: chris_robot_feedback.cpp  chris_ur5_moveit.cpp  chris_ur5_moveit_old.cpp
chris_ur5_moveit/urdf/: ur5_robotiq_3f_gripper_macro.xacro
chris_ur5_robotiq_config/: .setup_assistant  CMakeLists.txt  package.xml
chris_ur5_robotiq_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur5_robotiq_3f_gripper.srdf
chris_ur5_robotiq_config/launch/: chomp_planning_pipeline.launch.xml  chris_move_group.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
chris_ur_launch/: CMakeLists.txt  package.xml
chris_ur_launch/launch/: ur5.launch
universal_robot/ur_description/config/ur5/: joint_limits.yaml
