<?xml version="1.0"?>
<package format="2">
  <name>chris_ur_launch</name>
  <version>0.0.0</version>
  <description>Package containing calibrations and launch files for our UR robots.</description>
  <maintainer email="pctgloumeau@gmail.com">chris</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ur_robot_driver</build_depend>

  <build_export_depend>ur_robot_driver</build_export_depend>

  <exec_depend>ur_robot_driver</exec_depend>
  <export>

  </export>
</package>